# lucid

./: .gitignore  BUILD.md  README.md  SKILL.md  dev_out.txt  errors_frontend.txt  fix.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.json  build_err.txt  build_error.txt  check_err.txt  check_final.txt  check_out.txt  err.txt  errors.txt  final_errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  tray.rs
src-tauri/src/ai/: claude.rs  deepseek.rs  gemini.rs  groq.rs  mod.rs  ollama.rs  openrouter.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/ghost/: mod.rs
src-tauri/src/hotkeys/: mod.rs
src-tauri/src/overlay/: mod.rs
src-tauri/src/window/: mod.rs
src/components/: ChatPanel.tsx  ErrorBoundary.tsx  SettingsPanel.tsx  SnipOverlay.tsx  VaultPanel.tsx
src/styles/: app.css  tokens.css
temp-app/src-tauri/: tauri.conf.json
