[package]
name = "lucid"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[[bin]]
name = "AudioSessionManager"
path = "src/main.rs"

[lib]
name = "lucid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
anyhow = "1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-global-shortcut = "2"
screenshots = "0.8"
base64 = "0.22"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1.89"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "System_UserProfile",
  "Media_Ocr",
  "Graphics_Imaging",
  "Storage_Streams",
] }
